[package]
name = "tectonic_dvipdfmx"
version = "0.0.1-dev"
authors = ["Peter Williams <peter@newton.cx>"]
edition = "2018"
license = "GPL"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tectonic_bridge = { version = "0.0.1-dev", path = "../bridge" }
libc = "0.2"
libpng-sys = "1.1.8"
md-5 = "0.8.0"
sha2 = "0.8.0"
rand = "0.7.2"
chrono = "0.4.9"
# to ensure binaries are not different, we link to libz-sys
flate2 = { version = "1.0.12", default-features = false, features = ["zlib"] }

[build-dependencies]
cc = "^1.0"
