# Copyright 2018 the Tectonic Project
# Licensed under the MIT License.

[package]
name = "tectonic_engine"
version = "0.0.1-dev"
authors = ["Peter Williams <peter@newton.cx>"]
description = """
Core layout engine of XeTeX and Tectonic.
"""
build = "build.rs"
homepage = "https://tectonic-typesetting.github.io/"
documentation = "https://docs.rs/tectonic"
repository = "https://github.com/tectonic-typesetting/tectonic/"
readme = "README.md"
license = "MIT"
edition = "2018"

[build-dependencies]
cc = "^1.0.46"
pkg-config = "^0.3"  # note: sync dist/docker/*/pkg-config-rs.sh with the version in Cargo.lock
regex = "^1.3"
sha2 = "^0.8"
tectonic_cfg_support = { path = "../cfg_support", version = "0.0.3-dev" }
vcpkg = "0.2.8"

[features]
# developer feature to compile with the necessary flags for profiling tectonic.
profile = []

[dependencies]
bridge = { package = "tectonic_bridge", version = "0.0.1-dev", path = "../bridge" }
bibtex = { package = "tectonic_bibtex", version = "0.0.1-dev", path = "../bibtex" }
dpx = { package = "tectonic_dvipdfmx", version = "0.0.1-dev", path = "../dpx" }
bitflags = "1.2.1"
libc = "0.2"
chrono = "0.4.9"
#log = { version = "0.4", features = ["std"] }
harfbuzz-sys = {version = "^0.3", default-features = false}
euclid = "0.20"
enumn = "0.1.2"
derive_more = "0.99.7"
md5 = "0.7"
fontconfig_sys = { package = "servo-fontconfig", version = "0.5.1" }
once_cell = "1.5.2"
enum_dispatch = "0.3.5"
freetype = "0.7.0"
freetype-sys = "0.13.1"

[dependencies.font-kit]
version = "0.10.0"
# to minimize code change, we're using harfbuzz with freetype only
# but as font-kit takes over, this can go, and macOS gets to use Core Text, and Windows gets to use DirectWrite
features = ["loader-freetype", "loader-freetype-default"]

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9.1"
core-graphics = "0.22.1"
core-text = "19.1.0"
objc = "0.2.7"
objc-foundation = "0.1.1"
objc_id = "0.1.1"
